# DeepResearchX

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CODE_REVIEW.md  LICENSE  README.md  TODO.md  dev-start.ps1  dev-start.sh  dev-stop.ps1  dev-stop.sh  docker-compose.langfuse.yml  docker-compose.yml  eval.sh  run_drx_bench.py  sequence_diagram.md  start_langfuse_local.sh
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
a_stock_analyzer/: TODO.md  cli.py  design_deepresearch_v1.md  pyproject.toml
a_stock_analyzer/agents/: company_agent.py  financial_rag_agent.py  industry_agent.py  market_agent.py
a_stock_analyzer/config/: __init__.py  default.yaml  qwen.yaml  settings.py
a_stock_analyzer/core/: __init__.py  agent.py  base.py  context.py  context_compactor.py  context_manager.py  finding.py  intent_clarifier.py  message.py  orchestrator.py  planner.py  registry.py  report_generator.py  research_plan.py  skill_manager.py  tool_manager.py  worker.py
a_stock_analyzer/data/: anonymous_preferences.json
a_stock_analyzer/evaluation/: evaluator.py  llm_judge.py  metrics.py
a_stock_analyzer/memory/: __init__.py  long_term_store.py  manager.py  models.py  session_store.py
a_stock_analyzer/rag/: bm25_store.py  document_loader.py  embedding.py  hybrid_retriever.py  pipeline.py  query_rewriter.py  reranker.py  text_splitter.py  vector_store.py
a_stock_analyzer/scripts/: ingest_reports.py  run_evaluation.py
a_stock_analyzer/skills/: company_selection.py  industry_screening.py  market_analysis.py  rag_qa.py
a_stock_analyzer/tools/: akshare_data.py  embedding_call.py  llm_call.py  web_search.py
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  documents.py  models.py  router.py  streaming.py
backend/deep_research/: __init__.py
backend/deep_research/config/: __init__.py  default.yaml  prompt_loader.py  qwen.yaml  settings.py
backend/deep_research/config/prompts/: default.yaml
backend/deep_research/core/: __init__.py  agent.py  base.py  chapter_worker.py  context.py  context_compactor.py  context_manager.py  editor.py  finding.py  integration.py  intent_clarifier.py  message.py  orchestrator.py  outline_planner.py  planner.py  registry.py  report_generator.py  research_plan.py  reviser.py  skill_manager.py  tool_manager.py
backend/deep_research/data/: anonymous_preferences.json
backend/deep_research/data/output/: report_sess_20260427_mohi0zus_20260428_015730.md  report_sess_20260427_mohi0zus_20260428_020232.md  report_sess_20260427_mohibkgq_20260428_021628.md
backend/deep_research/data/sessions/: sess_20260427_mohi0zus.json  sess_20260427_mohi0zus.md  sess_20260427_mohibkgq.json  sess_20260427_mohibkgq.md
backend/deep_research/data/sessions/sess_20260427_mohi0zus/: chapter_c1.md  chapter_c2.md  chapter_c3.md  draft.md  edits.json
backend/deep_research/data/sessions/sess_20260427_mohibkgq/: chapter_c1.md  chapter_c2.md  chapter_c3.md  chapter_c4.md  chapter_c5.md  chapter_c6.md  chapter_c7.md  chapter_c8.md  chapter_c9.md  draft.md  edits.json  outline.json
backend/deep_research/data/vector_db/: chroma.sqlite3
backend/deep_research/evaluation/: README.md  __init__.py  chunking_metrics.py  evaluator.py  index_health.py  llm_judge.py  metrics.py  models.py  rag_evaluator.py  report.py  reporter.py
backend/deep_research/evaluation/benchmarks/: general_benchmark.json
backend/deep_research/evaluation/datasets/: alibaba_fy2025_benchmark.jsonl  alibaba_fy2025_benchmark_draft.jsonl
backend/deep_research/memory/: __init__.py  long_term_store.py  manager.py  models.py  session_store.py
backend/deep_research/observability/: __init__.py
backend/deep_research/rag/: __init__.py  bm25_retriever.py  chunking.py  document_loader.py  embedding.py  pipeline.py  reranker.py  text_splitter.py  vector_store.py
backend/deep_research/scripts/: run_evaluation.py
backend/deep_research/tools/: document_search.py  embedding_call.py  llm_call.py  web_scraper.py  web_search.py
backend/deep_research/utils/: __init__.py  json_parser.py  text_utils.py
backend/financial_agent/: __init__.py
backend/financial_agent/config/: __init__.py  settings.py
backend/financial_agent/core/: agent.py  chapter_worker.py  editor.py  finding.py  orchestrator.py  outline_planner.py  planner.py  registry.py  report_generator.py  research_plan.py  reviser.py  skill_manager.py
backend/financial_agent/data/: anonymous_preferences.json
backend/financial_agent/evaluation/: metrics.py
backend/financial_agent/evaluation/benchmarks/: general_benchmark.json
backend/financial_agent/memory/: __init__.py  long_term_store.py  models.py  session_store.py
backend/financial_agent/rag/: bm25_store.py  embedding.py  hybrid_retriever.py  pipeline.py  query_rewriter.py  text_splitter.py
backend/financial_agent/rag/multimodal/: vlm_processor.py
backend/financial_agent/scripts/: ingest_reports.py  run_evaluation.py
backend/financial_agent/tools/: akshare_data.py  llm_call.py  web_search.py
backend/scripts/: README.md  build_alibaba_benchmark.py  build_alibaba_benchmark_final.py  preview_chunks.py  run_rag_eval.py  run_rag_eval_local.py  run_rag_eval_local_hybrid.py  run_rag_eval_local_v2.py
backend/tests/: README.md  test_langfuse_integration.py
backend/tests/unit/: test_bm25.py  test_chapter_worker.py  test_chunking.py  test_core.py  test_documents.py  test_documents_only.py  test_evaluation_chunking.py  test_evaluation_metrics.py  test_evaluation_rag.py  test_outline_planner.py  test_rag.py  test_skills.py  test_tools.py
docs/: STAGE_EVALUATION_PROPOSAL.md  design_v2.md
financial_agent/: __init__.py  cli.py  design_review_v3.md  design_v4_architecture.md  pyproject.toml
financial_agent/agents/: financial_rag_agent.py
financial_agent/config/: default.yaml  settings.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
(+108 files in other folders)
