[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-research"
version = "0.1.0"
description = "Multi-Agent Deep Research System with RAG-based report generation"
readme = "../README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DeepResearchX Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "tenacity>=8.2",
    "httpx>=0.27",
    "aiohttp>=3.9",
    # RAG
    "chromadb>=0.5",
    "rank-bm25>=0.2",
    "sentence-transformers>=3.0",
    "langdetect>=1.0",
    "jieba>=0.42",
    # Document processing
    "PyPDF2>=3.0",
    "pdfplumber>=0.10",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    # Data
    "akshare>=1.14",
    "pandas>=2.0",
    "numpy>=1.24",
    # Web search
    "tavily-python>=0.3",
    "duckduckgo-search>=6.0",
    "beautifulsoup4>=4.12",
    # Report generation
    "markdown>=3.5",
    "weasyprint>=60.0",
    # Observability
    "langfuse>=2.0,<3.0",
    # Local PostgreSQL for Langfuse
    "pgserver>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "black>=24.0",
]

[project.scripts]
run-evaluation = "deep_research.scripts.run_evaluation:main"

[tool.hatch.build.targets.wheel]
packages = ["deep_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
