[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepresearchx"
version = "0.1.0"
description = "A production-grade multi-agent deep research system that generates comprehensive, structured reports on any topic."
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "DeepResearchX Contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ---------------------------------------------------------------------------
# Runtime dependencies — only modules the application imports unconditionally.
# Heavy optional features (local embeddings, PDF export) live in extras so a
# baseline install stays small (~250 MB) and avoids pulling the CUDA-flavored
# torch wheels by default.
# ---------------------------------------------------------------------------
dependencies = [
    # Web framework
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",

    # Settings, validation, HTTP, retries
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "tenacity>=8.2",

    # Retrieval & embeddings (cloud-API path only — see `local-embedding` extra)
    "chromadb>=0.5",
    "rank-bm25>=0.2",
    "jieba>=0.42",
    "numpy>=1.24",

    # Document loaders (PDF / Word / detection)
    "pypdf>=4.0",
    "pdfplumber>=0.10",
    "python-docx>=1.1",
    "langdetect>=1.0",
    "beautifulsoup4>=4.12",

    # External research providers
    "tavily-python>=0.3",
    "duckduckgo-search>=6.0",

    # Report generation (Markdown only — HTML/PDF export is in the `pdf` extra)
    "markdown>=3.5",

    # Observability (optional at runtime — guarded by feature flag)
    "langfuse>=2.0,<3.0",
]

[project.optional-dependencies]
# Local SentenceTransformer-based embeddings. Pulls torch + tokenizers.
# Without this extra, set `embedding.provider: openai` in default.yaml.
local-embedding = [
    "sentence-transformers>=3.0",
]

# PDF export via weasyprint. Requires system libraries (pango, cairo, gdk-pixbuf).
pdf = [
    "weasyprint>=60.0",
]

# Convenience: everything.
all = [
    "deepresearchx[local-embedding,pdf]",
]

[project.urls]
Homepage = "https://github.com/your-org/DeepResearchX"

[tool.hatch.build.targets.wheel]
packages = ["deep_research"]

# ---------------------------------------------------------------------------
# uv: single source of truth for the project virtual environment.
# Run `uv sync` from this directory; everything else is automatic.
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]  # isort

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
